...
                    Icon(
                        CupertinoIcons.person_crop_circle_badge_xmark,
                        color: CupertinoColors.activeBlue,
                        size: 26
                    ),
                    Text(
                        'Sign out',
                        style: TextStyle(
                            fontSize: 15.5,
                            color: CupertinoColors.activeBlue
                        )
                    )
                  ],
...
